// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI upload > should throw error if no report.json 1`] = `
"Error: report.json not found. Did you run collect first?
    at upload (file:///Users/Work/projects/flowup/quality-metrics-cli/dist/packages/cli/index.js:1307:11)
    at handler (file:///Users/Work/projects/flowup/quality-metrics-cli/dist/packages/cli/index.js:1419:13)
    at Object.handler (file:///Users/Work/projects/flowup/quality-metrics-cli/dist/packages/cli/index.js:1531:20)
    at file:///Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4myargs[24m/build/lib/command.js:206:54
    at file:///Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4myargs[24m/build/lib/utils/maybe-async-result.js:8:39
code-pushup upload

Upload report results to the portal

Options:
      --progress             Show progress bar in stdout.
                                                       [boolean] [default: true]
      --verbose              When true creates more verbose output. This is help
                             ful when debugging.      [boolean] [default: false]
      --config               Path the the config file, e.g. code-pushup.config.j
                             s       [string] [default: \\"code-pushup.config.js\\"]
      --persist.outputDir    Directory for the produced reports         [string]
      --persist.format       Format of the report output. e.g. \`md\`, \`json\`, \`st
                             dout\`                                       [array]
      --upload.organization  Organization slug from portal              [string]
      --upload.project       Project slug from portal                   [string]
      --upload.server        URL to your portal server                  [string]
      --upload.apiKey        API key for the portal server              [string]
  -h, --help                 Show help                                 [boolean]

Error: report.json not found. Did you run collect first?
    at upload (file:///Users/Work/projects/flowup/quality-metrics-cli/dist/packages/cli/index.js:1307:11)
    at handler (file:///Users/Work/projects/flowup/quality-metrics-cli/dist/packages/cli/index.js:1419:13)
    at Object.handler (file:///Users/Work/projects/flowup/quality-metrics-cli/dist/packages/cli/index.js:1531:20)
    at file:///Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4myargs[24m/build/lib/command.js:206:54
    at file:///Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4myargs[24m/build/lib/utils/maybe-async-result.js:8:39
"
`;

exports[`CLI upload > should throw error if no server url 1`] = `
"TypeError: Only absolute URLs are supported
    at getNodeRequestOptions (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mnode-fetch[24m/lib/index.js:1327:9)
    at /Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mnode-fetch[24m/lib/index.js:1450:19
    at new Promise (<anonymous>)
    at fetch (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mnode-fetch[24m/lib/index.js:1447:9)
    at fetch (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/node_modules/[4mcross-fetch[24m/dist/node-ponyfill.js:11:20)
    at /Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/build/cjs/index.js:128:18
    at makeRequest (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/build/cjs/index.js:282:28)
    at GraphQLClient.request (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/build/cjs/index.js:186:16)
    at /Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4m@code-pushup[24m/portal-client/index.cjs:6122:43
    at defaultWrapper (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4m@code-pushup[24m/portal-client/index.cjs:6117:66)
code-pushup upload

Upload report results to the portal

Options:
      --progress             Show progress bar in stdout.
                                                       [boolean] [default: true]
      --verbose              When true creates more verbose output. This is help
                             ful when debugging.      [boolean] [default: false]
      --config               Path the the config file, e.g. code-pushup.config.j
                             s       [string] [default: \\"code-pushup.config.js\\"]
      --persist.outputDir    Directory for the produced reports         [string]
      --persist.format       Format of the report output. e.g. \`md\`, \`json\`, \`st
                             dout\`                                       [array]
      --upload.organization  Organization slug from portal              [string]
      --upload.project       Project slug from portal                   [string]
      --upload.server        URL to your portal server                  [string]
      --upload.apiKey        API key for the portal server              [string]
  -h, --help                 Show help                                 [boolean]

TypeError: Only absolute URLs are supported
    at getNodeRequestOptions (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mnode-fetch[24m/lib/index.js:1327:9)
    at /Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mnode-fetch[24m/lib/index.js:1450:19
    at new Promise (<anonymous>)
    at fetch (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mnode-fetch[24m/lib/index.js:1447:9)
    at fetch (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/node_modules/[4mcross-fetch[24m/dist/node-ponyfill.js:11:20)
    at /Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/build/cjs/index.js:128:18
    at makeRequest (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/build/cjs/index.js:282:28)
    at GraphQLClient.request (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4mgraphql-request[24m/build/cjs/index.js:186:16)
    at /Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4m@code-pushup[24m/portal-client/index.cjs:6122:43
    at defaultWrapper (/Users/Work/projects/flowup/quality-metrics-cli/node_modules/[4m@code-pushup[24m/portal-client/index.cjs:6117:66)
"
`;
